<resources>
    <string name="app_name">Story App</string>
    <string name="splash_title">Dicoding Story</string>
    <string name="token">Bearer %s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_name">Input Your Name</string>
    <string name="hint_email">Input Your Email</string>
    <string name="hint_password">Input Your Password</string>
    <string name="invalid_name">Invalid format name</string>
    <string name="invalid_email">Invalid format email</string>
    <string name="invalid_password">Invalid format password</string>
    <string name="not_have_account_register">Not have account ?</string>
    <string name="have_account_login">Already Have account ?</string>
    <string name="settings">Setting</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="setting_language">Language Setting</string>
    <string name="logout_description">Are you sure to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="story_image">Image Story</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_image">Add Image</string>
    <string name="add_photo">Add Photo</string>
    <string name="description">Description</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_reject">Permission Reject</string>
    <string name="image_story">Image Story</string>
    <string name="retry">Retry</string>
    <string name="version">Version\u0020</string>
    <string name="version_detail">0.0.1</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="write_happy_story">Register and Write Happy Story</string>
    <string name="exit_app">Exit App</string>
    <string name="text_exit_app">Are you sure to exit app?</string>
    <string name="access_location_off">Access location off</string>
    <string name="turn_on">Turn On</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="appwidget_text">STORY APP WIDGET</string>
    <string name="empty_text">NO DATA</string>
    <string name="share_my_location">Share my location</string>
</resources>