<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/setting_language"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope3_bold"
            android:text="@string/settings"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/iv_back" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:fontFamily="@font/manrope3_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_language"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting" />

        <ImageView
            android:id="@+id/iv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language"
            app:layout_constraintBottom_toBottomOf="@+id/tv_language"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/tv_language"
            android:contentDescription="@string/setting_language" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope3_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="@+id/tv_language"
            app:layout_constraintStart_toEndOf="@+id/iv_logout"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/setting_language"
            app:layout_constraintBottom_toBottomOf="@+id/tv_logout"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/tv_logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
