<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/centerline"
            android:layout_centerInParent="true">
        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_350sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_above="@id/centerline"
            android:contentDescription="@string/login"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_75sdp"
            android:src="@drawable/icon_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_above="@id/centerline"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope3_bold"
                android:text="@string/welcome_back"
                android:textSize="@dimen/_30ssp"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/tvLoginContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope3_bold"
                android:text="@string/sign_in_to_continue"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerline"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/email"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">

            <com.teguh.storyapp.customview.CustomEditTextEmail
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope3_regular"
                android:id="@+id/edt_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/password"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:passwordToggleEnabled="true">

            <com.teguh.storyapp.customview.CustomEditTextPassword
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_password"
                android:fontFamily="@font/manrope3_regular"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.teguh.storyapp.customview.CustomButtonLogin
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:enabled="false"
            android:fontFamily="@font/manrope3_bold" />

        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope3_regular"
                android:text="@string/not_have_account_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:fontFamily="@font/manrope3_regular"
                android:textStyle="bold"
                android:text="@string/register"
                android:textColor="@color/colorSecondary" />


        </LinearLayout>
    </RelativeLayout>
</layout>
